# python-rest-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  Readme.md  app.py  build  db.py  dev  docker-compose.yaml  docker-entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt  schemas.py  settings.py  tasks.py
config/: blocklist.py  config_test.py  db.py  features.py  jwt.py  swagger.py  task_queue.py
migrations/: env.py
migrations/versions/: 450fc7cfe00f_.py  5009c3b8a84d_.py  8dae43cf597e_.py  e5c9fdd8905d_.py
models/: __init__.py  item.py  item_tags.py  tag.py  user.py  venue.py
pythonrestapi/: api.py  application.py  application_factory.py  blocklist.py  config.py  config_default.py  db.py  jwt.py  swagger.py  task_queue.py
resources/: item.py  tag.py  user.py  venue.py
templates/email/: action.html
tests/: __init__.py  conftest.py  factories.py  user.py
