[tool.black]
line-length = 119
target-version = ['py39']
include = '\.py?$'
extend-exclude = '''
/(
  | blib2to3
  | tests/data
  | profiling
  | migrations
)/
'''

[tool.poetry]
name = "python-rest-api"
version = "0.1.0"
description = "A rest API using python flask"
authors = ["Yigit Yesilpinar <yigityesilpinar@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_rest_api" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-jwt-extended = "^4.4.4"
gunicorn = "^20.1.0"
sqlalchemy = "^2.0.0"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
psycopg2 = "^2.9.5"
marshmallow = "^3.19.0"
mypy = "^0.991"
flask-smorest = "^0.40.0"
flask-migrate = "^4.0.3"
alembic = "^1.9.2"
redis = "^4.4.2"
rq = "^1.12.0"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
mypy = "^0.991"
types-redis = "^4.4.0.4"
types-requests = "^2.28.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
